--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,7 +8,7 @@
       content="Web site created using create-react-app"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <title>염정원 포트폴리오</title>
